--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <button class="cabecalho__menu">menu</button>
+        <img src="assets/img/logo.svg" alt="Logoda HZC" class="cabecalho__logo">
+        <button class="cabecalho__notificacao">notificação</button>
+    </header>
 </body>
 </html>
