--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
 
+    <script src="index.js"></script>
 </body>
 </html>
