--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
+    <main class="principal">
+        <h2 class="titulo-pagina">Inínio</h2>
+        <artical class="cartao">
+            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__destaque">Védeo em destaque</p>
+                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__perfil">Bruno Lopez</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <p class="cartao__info cartao__info--vizualizacao">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+            </div>
+        </artical>
+    </main>
 
     <script src="index.js"></script>
 </body>
