Grid gap/row/column

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <artical class="cartao">
+        <article class="cartao">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
@@ -38,7 +38,7 @@
                 <p class="cartao__info cartao__info--vizualizacao">33 vizualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
-        </artical>
+        </article>
     </main>
 
     <script src="index.js"></script>
