--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <article class="cartao">
+        <article class="cartao cartao--destaque">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
