--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
+        <section class="secao">
+            <h3 class="titulo-secao">Vídeos mais vistos</h3>
+            <article class="cartao cartao--destaque">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play cartao__botao--destaque" aria-label="Assistir agora">Assistir agora</button>
+                </div>
+            </article>
+        </section>
     </main>
 
     <script src="index.js"></script>
