--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
